--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@ nav ul li{
         .navbar .container .nav{
             position: fixed;
             top: 0px;
-            background-color: #215cba;
+            background-color: #215cba4d;
             z-index: 3;
             display: flex;
             justify-content: space-around;
